<resources>
    <string name="app_name">Fintech</string>

    <string name="home">Home</string>
    <string name="transfers">Transfers</string>
    <string name="camera">Camera</string>
    <string name="cards">Cards</string>
    <string name="statistics">Statistics</string>
    <string name="title">Title</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>