<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_screen"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/transfer"
            android:icon="@drawable/ic_card"
            android:title="@string/transfers" />
        <item
            android:id="@+id/camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/camera" />
        <item
            android:id="@+id/cards"
            android:icon="@drawable/ic_card"
            android:title="@string/cards" />
        <item
            android:id="@+id/statistics"
            android:icon="@drawable/ic_card"
            android:title="@string/statistics" />
    </group>
</menu>